# KH-ReCOM-Tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Blender/addons/io_kh_recom/: __init__.py  import_azf.py  import_gsd.py  import_mdl.py  materials.py  mesh_parser.py  readutil.py
Extractor/: decompress.h  isofile.cpp  isofile.h  main.cpp
ResourceUnpacker/: main.cpp  packed-resource.cpp  packed-resource.h
